--- a/HTML CSS JS/HTML + CSS/04_practice/Task2.html
+++ b/HTML CSS JS/HTML + CSS/04_practice/Task2.html
@@ -20,17 +20,17 @@
         <nav>
         <ol>
             <li><a href="#History">History</a></li>
-            <li>Modern programming</li>
+            <li><a href="#Modern programming">Modern programming</a></li>
             <ol>
-                <li>Quality requirements</li>
-                <li>Readability of source code</li>
-                <li>Algorithmic complexity</li>
+                <li><a href="#Quality requirements">Quality requirements</a></li>
+                <li><a href="#Readability of source code">Readability of source code</a></li>
+                <li><a href="#Algorithmic complexity">Algorithmic complexity</a></li>
                 <ol>
-                    <li>Chess algorithms as an example</li>
+                    <li><a href="#Chess algorithms as an example">Chess algorithms as an example</a></li>
                 </ol>
             </ol>
-            <li>Programming languages</li>
-            <li>Programmers</li>
+            <li><a href="#Programming languages">Programming languages</a></li>
+            <li><a href="#Programmers" class="for-underline">Programmers</a></li>
         </ol>
     </nav>
     </div>
@@ -44,9 +44,9 @@
     </p>
     <p>Machine code was the language of early programs, written in the instruction set of the particular machine, often in binary notation. Assembly languages were soon developed that let the programmer specify instruction in a text format, (e.g., ADD X, TOTAL), with abbreviations for each operation code and meaningful names for specifying addresses. However, because an assembly language is little more than a different notation for a machine language, any two machines with different instruction sets also have different assembly languages. Kathleen Booth created one of the first Assembly languages in 1950 for various computers at Birkbeck College.
     </p>
-    <h2>Modern programming</h2>
+    <h2 id="Modern programming">Modern programming</h2>
     <hr>
-    <h3>Quality requirements</h3>
+    <h3 id="Quality requirements">Quality requirements</h3>
     <p>Whatever the approach to development may be, the final program must satisfy some fundamental properties. The following properties are among the most important:
     </p>
     <ul>
@@ -63,22 +63,22 @@
         <li>Efficiency/performance: Measure of system resources a program consumes (processor time, memory space, slow devices such as disks, network bandwidth and to some extent even user interaction): the less, the better. This also includes careful management of resources, for example cleaning up temporary files and eliminating memory leaks.
         </li>
     </ul>
-    <h3>Readability of source code</h3>
+    <h3 id="Readability of source code">Readability of source code</h3>
     <p>In computer programming, readability refers to the ease with which a human reader can comprehend the purpose, control flow, and operation of source code. It affects the aspects of quality above, including portability, usability and most importantly maintainability.
     </p>
     <p>Readability is important because programmers spend the majority of their time reading, trying to understand and modifying existing source code, rather than writing new source code. Unreadable code often leads to bugs, inefficiencies, and duplicated code. A study[25] found that a few simple readability transformations made code shorter and drastically reduced the time to understand it.
     </p>
-    <h3>Algorithmic complexity</h3>
+    <h3 id="Algorithmic complexity">Algorithmic complexity</h3>
     <p>The academic field and the engineering practice of computer programming are both largely concerned with discovering and implementing the most efficient algorithms for a given class of problem. For this purpose, algorithms are classified into orders using so-called Big O notation, which expresses resource use, such as execution time or memory consumption, in terms of the size of an input. Expert programmers are familiar with a variety of well-established algorithms and their respective complexities and use this knowledge to choose algorithms that are best suited to the circumstances.
     </p>
-    <h4>Chess algorithms as an example</h4>
+    <h4 id="Chess algorithms as an example">Chess algorithms as an example</h4>
     <p>"Programming a Computer for Playing Chess" was a 1950 paper that evaluated a "minimax" algorithm that is part of the history of algorithmic complexity; a course on IBM's Deep Blue (chess computer) is part of the computer science curriculum at Stanford University.[27]
     </p>
-    <h2>Programming languages</h2>
+    <h2 id="Programming languages">Programming languages</h2>
     <hr>
     <p>Different programming languages support different styles of programming (called programming paradigms). The choice of language used is subject to many considerations, such as company policy, suitability to task, availability of third-party packages, or individual preference. Ideally, the programming language best suited for the task at hand will be selected. Trade-offs from this ideal involve finding enough programmers who know the language to build a team, the availability of compilers for that language, and the efficiency with which programs written in a given language execute. Languages form an approximate spectrum from "low-level" to "high-level"; "low-level" languages are typically more machine-oriented and faster to execute, whereas "high-level" languages are more abstract and easier to use but execute less quickly. It is usually easier to code in "high-level" languages than in "low-level" ones.
     </p>
-    <h2>Programmers</h2>
+    <h2 id="Programmers">Programmers</h2>
     <hr>
     <p>Computer programmers are those who write computer software. Their jobs usually involve:
     </p>
