--- a/HTML CSS JS/JS/index.html
+++ b/HTML CSS JS/JS/index.html
@@ -23,7 +23,9 @@
     <!-- <script src="./base.js"></script> -->
     <!-- <script src="./01_hometask/01_hometask.js"></script> -->
     <!-- <script src="./02_hometask/02_hometask.js"></script> -->
-    <script src="./05_practice/05_practice.js"></script>
+    <script src="./04_hometask/04_hometask.js"></script>
+    <!-- <script src="./05_practice/05_practice.js"></script> -->
+    
 </body>
 
 </html>
