--- a/HTML CSS JS/HTML + CSS/06_practice_&_hometask/Task1.html
+++ b/HTML CSS JS/HTML + CSS/06_practice_&_hometask/Task1.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="scroll">
     <table>
         <thead>
             <tr>
@@ -84,5 +85,6 @@
             <td>24</td>
         </tr>
     </table>
+</div>
 </body>
 </html>
