--- a/HTML CSS JS/HTML + CSS/08_practice/LoginPage.html
+++ b/HTML CSS JS/HTML + CSS/08_practice/LoginPage.html
@@ -8,17 +8,19 @@
     <title>Login Page</title>
 </head>
 <body>
-    <form class="login-form"action="#">
-        <h2>Member Login</h2>
-        <input type="text" placeholder="Username">
-        <input type="password" placeholder="Password">
-        <input type="button" value="Login">
-        <a href="#">Forgot Password?</a>
-    </form>
-    <p>... or login with:</p>
-    <div class="last-buttons">
-        <button class="facebook"><img src="../resources/facebook.svg" alt="">Facebook</button>
-        <button class="twitter"><img src="../resources/twitter.svg" alt="">Twitter</button>
+    <div class="main-div">
+        <form class="login-form"action="#">
+            <h2>Member Login</h2>
+            <input type="text" placeholder="Username">
+            <input type="password" placeholder="Password">
+            <input type="button" value="Login">
+            <a href="#">Forgot Password?</a>
+        </form>
+        <p>... or login with:</p>
+        <div class="last-buttons">
+            <button class="facebook"><img src="../resources/facebook.svg" alt="">Facebook</button>
+            <button class="twitter"><img src="../resources/twitter.svg" alt="">Twitter</button>
+        </div>
     </div>
 </body>
 </html>
